# stapik-calendar

./: CMakeLists.txt  README.md
packaging/: install.sh  stapikcalendar.desktop.template
resources/: style.css
resources/locales/: de.json  en.json  pl.json
src/: AppPaths.cpp  AppStyleProvider.cpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/calendar/: CalendarCell.cpp  CalendarCell.hpp  CalendarGrid.cpp  CalendarGrid.hpp  CalendarHeader.cpp  CalendarHeader.hpp  CalendarView.hpp
src/calendar/command/: AddEntryCommand.cpp  AddEntryCommand.hpp  CalendarCommand.cpp  CalendarCommandHistory.cpp  CalendarCommandHistory.hpp  DeleteEntryCommand.cpp  DeleteEntryCommand.hpp  EditEntryCommand.cpp  EditEntryCommand.hpp
src/calendar/data/: CalendarEntry.hpp
src/calendar/detector/: ClipboardUrlDetector.cpp
src/calendar/dialog/: CalendarEntryDialog.cpp  CalendarEntryDialog.hpp
src/calendar/navbar/: CalendarNavBar.cpp  CalendarNavBar.hpp
src/calendar/storage/: CalendarStorage.cpp  CalendarStorage.hpp
src/calendar/widget/: CalendarEntryWidget.cpp  CalendarEntryWidget.hpp
src/cloud/: CloudStorageClient.cpp  CloudStorageClient.hpp  CloudStorageConfigStorage.cpp  CloudStorageConfigStorage.hpp  ConnectDialog.cpp  ConnectDialog.hpp
src/core/command/: AddEntryCommand.cpp  AddEntryCommand.hpp  CalendarCommand.hpp  CalendarCommandHistory.cpp  CalendarCommandHistory.hpp  DeleteEntryCommand.cpp  DeleteEntryCommand.hpp  EditEntryCommand.cpp  EditEntryCommand.hpp  EntryCommandBase.cpp  EntryCommandBase.hpp  IndexedEntryCommand.cpp  IndexedEntryCommand.hpp
src/core/locale/: Locale.hpp  LocaleManager.cpp  LocaleManager.hpp  LocalizationEngine.cpp  LocalizationEngine.hpp
src/core/model/: CalendarEntries.hpp
src/core/util/: ClipboardUrlDetector.cpp  ClipboardUrlDetector.hpp  DateUtils.cpp  DateUtils.hpp  UrlTitleFetcher.cpp  UrlTitleFetcher.hpp
src/dialog/: AboutDialog.cpp  AboutDialog.hpp
src/infrastructure/network/: CloudStorageClient.cpp  CloudStorageClient.hpp  CloudStorageConfig.hpp  CloudStorageConfigStorage.cpp  CloudStorageConfigStorage.hpp
src/infrastructure/storage/: CalendarStorage.cpp  CalendarStorage.hpp  CalendarSyncCoordinator.cpp  CalendarSyncCoordinator.hpp
src/locale/: Locale.hpp  LocaleManager.cpp  LocaleManager.hpp  LocalizationEngine.cpp  LocalizationEngine.hpp
src/menu/: MainMenu.cpp  MainMenu.hpp  MenuActionHandler.cpp  MenuActionHandler.hpp
src/resources/locales/: de.json  en.json
src/ui/action/: MenuActionHandler.cpp  MenuActionHandler.hpp
src/ui/dialog/: AboutDialog.cpp  AboutDialog.hpp  CalendarEntryDialog.cpp  CalendarEntryDialog.hpp  ConnectDialog.cpp  ConnectDialog.hpp  DialogUtils.cpp  Version.hpp.in
src/ui/style/: AppStyleProvider.hpp
src/ui/view/: CalendarCell.cpp  CalendarCell.hpp  CalendarGrid.cpp  CalendarGrid.hpp  CalendarHeader.cpp  CalendarHeader.hpp  CalendarNavBar.cpp  CalendarNavBar.hpp  CalendarView.cpp  CalendarView.hpp
src/ui/widget/: CalendarEntryWidget.hpp  MainMenu.cpp  MainMenu.hpp
src/ui/window/: MainWindow.cpp  MainWindow.hpp
src/util/: UrlTitleFetcher.cpp  UrlTitleFetcher.hpp
